rename receiver -> recipient

--- a/documentation/src/main/asciidoc/reference/manual/en_US/03_architecture.adoc
+++ b/documentation/src/main/asciidoc/reference/manual/en_US/03_architecture.adoc
@@ -5,6 +5,6 @@ This is just a high level view for those that are interested about how {projectn
 // NotificationJobs are scheduled via cron/deadline/immediate
 // - template, selector, channel
 // JobScheduler consumes NotificationJobs and invokes NotificationJobProcessor incrementally
-// - instantiated template, receiver
-// NotificationJobProcessor makes sure Notifications are sent to Receiver via Channel with at-least-once sematics
+// - instantiated template, recipient
+// NotificationJobProcessor makes sure Notifications are sent to Recipient via Channel with at-least-once sematics
 // - might persist notifications before trying to send them
